[project]
name = "lightning-analysis-templates"
version = "0.1.0"
description = "Example Python scripts for analysing data exported from LabChart Lightning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "ruff>=0.7.3",
]
